Revert "try prevent scroll on mobile devices"
This reverts commit d35a573deaad6ccd8e49aa3a7fed5b2d4912cef8.

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,3 @@ a {
 .widthlimited {
 	max-width: 100%;
 }
-.fixed {
-	position: fixed;
-}
